kubernetes/apps/kube-system/external-secrets/bitwarden/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-to-bw-cli
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: bitwarden
      app.kubernetes.io/name: bitwarden
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name: external-secrets
    - ingress:
      - fromEndpoints:
          - matchLabels:
              app.kubernetes.io/instance: external-secrets
              app.kubernetes.io/name: external-secrets
        toPorts:
          - ports:
              - port: "8087"
                protocol: TCP
